--- a/android/app/src/main/res/layout/black_hole_music_widget.xml
+++ b/android/app/src/main/res/layout/black_hole_music_widget.xml
@@ -1,37 +1,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     style="@style/Widget.Android.AppWidget.Container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:weightSum="2"
+    tools:ignore="ContentDescription,HardcodedText"
+    tools:layout_height="130dp"
     android:theme="@style/Theme.Android.AppWidgetContainer">
-<!--    <Button-->
-<!--        android:id="@+id/bhwidget_previousbtn"-->
-<!--        style="@style/Widget.Android.AppWidget.InnerView"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:contentDescription="@string/appwidget_text"-->
-<!--        android:text="Previous"-->
-<!--        android:textSize="24sp"-->
-<!--        android:textStyle="bold|italic" />-->
 
-    <Button
-        android:id="@+id/bhwidget_playbtn"
-        style="@style/Widget.Android.AppWidget.InnerView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:contentDescription="@string/appwidget_text"
-        android:text="Play"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+    <ViewFlipper
+        android:id="@+id/viewFlipper"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:inAnimation="@anim/in_animation"
+        android:outAnimation="@anim/out_animation">
+    </ViewFlipper>
 
-<!--    <Button-->
-<!--        android:id="@+id/bhwidget_nextbtn"-->
-<!--        style="@style/Widget.Android.AppWidget.InnerView"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:contentDescription="@string/appwidget_text"-->
-<!--        android:text="Next"-->
-<!--        android:textSize="24sp"-->
-<!--        android:textStyle="bold|italic" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="3">
+
+        <ImageButton
+            android:id="@+id/button_prev"
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/audio_service_skip_previous"
+            android:background="@android:color/transparent" />
+
+        <ImageButton
+            android:id="@+id/button_play_pause"
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/audio_service_play_arrow"
+            android:background="@android:color/transparent" />
+
+        <ImageButton
+            android:id="@+id/button_next"
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:src="@drawable/audio_service_skip_next"
+            android:background="@android:color/transparent" />
+
+    </LinearLayout>
 
 </LinearLayout>
